# efficient-dl-systems

week02_management_and_testing/homework/: load_model.py  main.py  pyproject.toml
week02_management_and_testing/homework/conf/: config.yaml
week02_management_and_testing/homework/conf/dataset/: cifar10.yaml
week02_management_and_testing/homework/conf/train/model/: ddpm.yaml
week02_management_and_testing/homework/conf/train/optimizer/: adam.yaml  sgd.yaml
week02_management_and_testing/homework/conf/train/train_params/: default.yaml
week02_management_and_testing/homework/conf/train/transform/: cifar10.yaml
week02_management_and_testing/homework/modeling/: diffusion.py  training.py  unet.py
week02_management_and_testing/homework/tests/: test_model.py  test_pipeline.py
week03_fast_pipelines/homework/task1/: dvc.yaml  pyproject.toml  train.py
week03_fast_pipelines/homework/task2/: bench.py  dataset.py  pyproject.toml  run_epoch.py  transformer.py
week04_large_models/: offloaded_model.py  prefetcher.py  prefetcher_tests.py  profile_forward.py  profile_gpu_only.py  pyproject.toml  split_qwen.py  test_forward.py  tests_utils.py  weight_loading.py  weight_loading_tests.py
week08_inference_software/homework/edlang/entrypoints/: engine.py
week08_inference_software/homework/edlang/managers/: __init__.py  metric_manager.py  scheduler_manager.py
week08_inference_software/homework/edlang/server/: launch.py
